
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef int u32 ;
struct TYPE_3__ {scalar_t__ cur; scalar_t__ max; int fail; } ;
struct TYPE_4__ {int lock; TYPE_1__ pbl; } ;
struct c4iw_rdev {TYPE_2__ stats; int pbl_kref; int pbl_pool; } ;


 int MIN_PBL_SHIFT ;
 unsigned long gen_pool_alloc (int ,int) ;
 int kref_get (int *) ;
 int mutex_lock (int *) ;
 int mutex_unlock (int *) ;
 int pr_debug (char*,int ,int) ;
 scalar_t__ roundup (int,int) ;

u32 c4iw_pblpool_alloc(struct c4iw_rdev *rdev, int size)
{
 unsigned long addr = gen_pool_alloc(rdev->pbl_pool, size);
 pr_debug("addr 0x%x size %d\n", (u32)addr, size);
 mutex_lock(&rdev->stats.lock);
 if (addr) {
  rdev->stats.pbl.cur += roundup(size, 1 << MIN_PBL_SHIFT);
  if (rdev->stats.pbl.cur > rdev->stats.pbl.max)
   rdev->stats.pbl.max = rdev->stats.pbl.cur;
  kref_get(&rdev->pbl_kref);
 } else
  rdev->stats.pbl.fail++;
 mutex_unlock(&rdev->stats.lock);
 return (u32)addr;
}
