; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/cxgb4/extr_resource.c_c4iw_pblpool_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/cxgb4/extr_resource.c_c4iw_pblpool_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.c4iw_rdev = type { %struct.TYPE_4__, i32, i32 }
%struct.TYPE_4__ = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64, i64, i32 }

@.str = private unnamed_addr constant [19 x i8] c"addr 0x%x size %d\0A\00", align 1
@MIN_PBL_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @c4iw_pblpool_alloc(%struct.c4iw_rdev* %0, i32 %1) #0 {
  %3 = alloca %struct.c4iw_rdev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.c4iw_rdev* %0, %struct.c4iw_rdev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.c4iw_rdev*, %struct.c4iw_rdev** %3, align 8
  %7 = getelementptr inbounds %struct.c4iw_rdev, %struct.c4iw_rdev* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @gen_pool_alloc(i32 %8, i32 %9)
  store i64 %10, i64* %5, align 8
  %11 = load i64, i64* %5, align 8
  %12 = trunc i64 %11 to i32
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @pr_debug(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %13)
  %15 = load %struct.c4iw_rdev*, %struct.c4iw_rdev** %3, align 8
  %16 = getelementptr inbounds %struct.c4iw_rdev, %struct.c4iw_rdev* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = call i32 @mutex_lock(i32* %17)
  %19 = load i64, i64* %5, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %57

21:                                               ; preds = %2
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* @MIN_PBL_SHIFT, align 4
  %24 = shl i32 1, %23
  %25 = call i64 @roundup(i32 %22, i32 %24)
  %26 = load %struct.c4iw_rdev*, %struct.c4iw_rdev** %3, align 8
  %27 = getelementptr inbounds %struct.c4iw_rdev, %struct.c4iw_rdev* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 1
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %30, %25
  store i64 %31, i64* %29, align 8
  %32 = load %struct.c4iw_rdev*, %struct.c4iw_rdev** %3, align 8
  %33 = getelementptr inbounds %struct.c4iw_rdev, %struct.c4iw_rdev* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 1
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = load %struct.c4iw_rdev*, %struct.c4iw_rdev** %3, align 8
  %38 = getelementptr inbounds %struct.c4iw_rdev, %struct.c4iw_rdev* %37, i32 0, i32 0
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 1
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = icmp sgt i64 %36, %41
  br i1 %42, label %43, label %53

43:                                               ; preds = %21
  %44 = load %struct.c4iw_rdev*, %struct.c4iw_rdev** %3, align 8
  %45 = getelementptr inbounds %struct.c4iw_rdev, %struct.c4iw_rdev* %44, i32 0, i32 0
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 1
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = load %struct.c4iw_rdev*, %struct.c4iw_rdev** %3, align 8
  %50 = getelementptr inbounds %struct.c4iw_rdev, %struct.c4iw_rdev* %49, i32 0, i32 0
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 1
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 1
  store i64 %48, i64* %52, align 8
  br label %53

53:                                               ; preds = %43, %21
  %54 = load %struct.c4iw_rdev*, %struct.c4iw_rdev** %3, align 8
  %55 = getelementptr inbounds %struct.c4iw_rdev, %struct.c4iw_rdev* %54, i32 0, i32 1
  %56 = call i32 @kref_get(i32* %55)
  br label %64

57:                                               ; preds = %2
  %58 = load %struct.c4iw_rdev*, %struct.c4iw_rdev** %3, align 8
  %59 = getelementptr inbounds %struct.c4iw_rdev, %struct.c4iw_rdev* %58, i32 0, i32 0
  %60 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %59, i32 0, i32 1
  %61 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %60, i32 0, i32 2
  %62 = load i32, i32* %61, align 8
  %63 = add nsw i32 %62, 1
  store i32 %63, i32* %61, align 8
  br label %64

64:                                               ; preds = %57, %53
  %65 = load %struct.c4iw_rdev*, %struct.c4iw_rdev** %3, align 8
  %66 = getelementptr inbounds %struct.c4iw_rdev, %struct.c4iw_rdev* %65, i32 0, i32 0
  %67 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %66, i32 0, i32 0
  %68 = call i32 @mutex_unlock(i32* %67)
  %69 = load i64, i64* %5, align 8
  %70 = trunc i64 %69 to i32
  ret i32 %70
}

declare dso_local i64 @gen_pool_alloc(i32, i32) #1

declare dso_local i32 @pr_debug(i8*, i32, i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i64 @roundup(i32, i32) #1

declare dso_local i32 @kref_get(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
